Updated and now trying to fix the issue with the canvas image being cropped...

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,10 +1,8 @@
 #cameraDisplay {
     position: relative;
     margin-top: 10em;
-    margin-left: -5em;
     opacity: 1;
     transition: opacity 1s;
-    overflow: hidden;
 }
 
 #canvasPhoto {
